update env with proper chromedriver binary

--- a/environment.yaml
+++ b/environment.yaml
@@ -9,4 +9,4 @@ dependencies:
     - fastapi
     - uvicorn[standard]
     - selenium
-    - python-chromedriver-binary==<version>  # Replace <version> with the desired version of chromedriver-binary
+    - python-chromedriver-binary  # Replace <version> with the desired version of chromedriver-binary
